# supersonic

./: .gitignore  AUTHORS  ChangeLog  DevGuide.md  ExpressionReference.md  INSTALL  Makefile.am  NEWS  OperationReference.md  ProjectHome.md  README  autogen.sh  configure.ac  install_supersonic.sh
m4/: ax_check_compile_flag.m4
supersonic/: supersonic.h
supersonic/base/exception/: exception.h  exception_macros.h  exception_test.cc  result.h  result_test.cc
supersonic/base/infrastructure/: aggregation_operators.h  aggregation_operators_test.cc  bit_pointers.cc  bit_pointers.h  bit_pointers_test.cc  block.cc  block.h  block_test.cc  copy_column.cc  copy_column.h  copy_column_test.cc  double_buffered_block.cc  double_buffered_block.h  double_buffered_block_test.cc  init.h  operators.h  operators_test.cc  projector.cc  projector.h  projector_test.cc  tuple_schema.cc  tuple_schema.h  tuple_schema_test.cc  types.cc  types.h  types_infrastructure.cc  types_infrastructure.h  types_infrastructure_test.cc  types_test.cc  variant.h  variant_pointer.h  variant_pointer_test.cc  view_copier.cc  view_copier.h  view_copier_test.cc
supersonic/base/memory/: arena.cc  arena.h  arena_test.cc  memory.cc  memory.h  memory_mocks.cc  memory_mocks.h  memory_test.cc
supersonic/benchmark/base/: benchmark_types.h
supersonic/benchmark/dot/: dot_drawer.cc  dot_drawer.h  dot_drawer_test.cc
supersonic/benchmark/examples/: common_utils.cc  common_utils.h  operation_example.cc
supersonic/benchmark/infrastructure/: benchmark_listener.cc  benchmark_listener.h  benchmark_listener_mock.h  benchmark_listener_test.cc  benchmark_transformer.cc  benchmark_transformer.h  benchmark_transformer_test.cc  cursor_statistics.cc  cursor_statistics.h  cursor_statistics_mock.h  node.cc  node.h  node_test.cc  tree_builder.cc  tree_builder.h
supersonic/benchmark/manager/: benchmark_manager.cc  benchmark_manager.h  benchmark_manager_test.cc
supersonic/benchmark/proto/: benchmark.proto
supersonic/cursor/base/: cursor.cc  cursor.h  cursor_mock.h  cursor_transformer.h  lookup_index.cc  lookup_index.h  lookup_index_test.cc  operation.h
supersonic/cursor/core/: aggregate.h  aggregate_clusters.cc  aggregate_clusters_test.cc  aggregate_groups.cc  aggregate_groups_test.cc  aggregate_scalar.cc  aggregate_scalar_test.cc  aggregator.cc  aggregator.h  benchmarks.cc  benchmarks.h  coalesce.cc  coalesce.h  coalesce_test.cc  column_aggregator.cc  column_aggregator.h  column_aggregator_test.cc  compute.cc  compute.h  compute_test.cc  filter.cc  filter.h  filter_test.cc  foreign_filter.cc  foreign_filter.h  foreign_filter_test.cc  generate.cc  generate.h  generate_test.cc  hash_join.cc  hash_join.h  hash_join_test.cc  hybrid_aggregate_large_test.cc  hybrid_aggregate_test.cc  hybrid_group_utils.cc  hybrid_group_utils.h  hybrid_group_utils_test.cc  limit.cc  limit.h  limit_test.cc  (+24 more)
supersonic/cursor/infrastructure/: basic_cursor.cc  basic_cursor.h  basic_operation.cc  basic_operation.h  basic_operation_test.cc  file_io-internal.h  file_io.cc  file_io.h  history_transformer.h  iterators.cc  iterators.h  iterators_test.cc  ordering.cc  ordering.h  ownership_revoker.h  row.h  row_copier.h  row_copier_test.cc  row_hash_set.cc  row_hash_set.h  row_hash_set_test.cc  row_test.cc  table.cc  table.h  table_test.cc  value_ref.h  view_cursor.cc  view_cursor.h  view_cursor_test.cc  view_printer.cc  view_printer.h  writer.cc  writer.h  writer_test.cc
supersonic/cursor/proto/: cursors.proto
supersonic/expression/base/: expression.cc  expression.h
supersonic/expression/core/: arithmetic_bound_expressions.cc  arithmetic_bound_expressions.h  arithmetic_bound_expressions_test.cc  arithmetic_expressions.cc  arithmetic_expressions.h  arithmetic_expressions_test.cc  case_expression_test.cc  comparison_bound_expressions.cc  comparison_bound_expressions.h  comparison_bound_expressions_test.cc  comparison_expressions.cc  comparison_expressions.h  date_bound_expressions.cc  date_bound_expressions.h  date_bound_expressions_test.cc  date_evaluators.cc  date_evaluators.h  date_expressions.cc  date_expressions.h  date_expressions_test.cc  elementary_bound_expressions.cc  elementary_bound_expressions.h  elementary_bound_expressions_test.cc  elementary_expressions.cc  elementary_expressions.h  elementary_expressions_test.cc  math_bound_expressions.cc  math_bound_expressions.h  math_bound_expressions_test.cc  math_evaluators.h  math_expressions.cc  math_expressions.h  math_expressions_test.cc  projecting_bound_expressions.cc  projecting_bound_expressions.h  projecting_bound_expressions_test.cc  projecting_expressions.cc  projecting_expressions.h  projecting_expressions_test.cc  regexp_bound_expressions.cc  (+21 more)
supersonic/proto/: specification.proto  supersonic.proto
supersonic/serialization/: build_expression_from_proto.cc  build_expression_from_proto.h
supersonic/testing/: block_builder.cc  block_builder.h  comparable_cursor.cc  comparable_cursor.h  comparable_tuple_schema.cc  comparable_tuple_schema.h  comparable_view.cc  comparable_view.h  comparators.h  expression_test_helper.cc  expression_test_helper.h  operation_testing.cc  operation_testing.h  proto_matcher.h  repeating_block.cc  repeating_block.h  row.cc  row.h  short_circuit_tester.cc  short_circuit_tester.h  streamable.cc  streamable.h  view_comparator.cc  view_comparator.h
supersonic/utils/: algorithm.h  atomic_refcount.h  atomicops-internals-x86.cc  atomicops.h  basictypes.h  bits.cc  bits.h  casts.h  charmap.h  container_literal.h  container_literal_generated.h  container_logging.h  cycleclock-inl.h  demangle.cc  demangle.h  endian.h  file.cc  file.h  file_util.cc  file_util.h  fixedarray.h  int128.cc  int128.h  integral_types.h  iterator_adaptors.h  linked_ptr.h  linux_syscall_support.h  logging-inl.h  macros.h  manual_constructor.h  map-util.h  map_util.h  mathlimits.cc  mathlimits.h  mutex.h  once.cc  once.h  paranoid.h  pointer_vector.h  port.h  (+21 more)
test/: smoke_test.cc
test/guide/: README  group_sort.cc  join.cc  primer.cc
test_utils/: supersonic_test_main.cc
(+113 files in other folders)
